fix spacings for wide screens

--- a/css/style.css
+++ b/css/style.css
@@ -395,6 +395,11 @@ footer .footer__links--blank {
   border-top-right-radius: 30px;
   margin-top: -30px;
 }
+@media only screen and (min-width: 1024px) {
+  .menu__top {
+    justify-content: center;
+  }
+}
 .menu__top h1 {
   font-family: Shrikhand;
   font-size: 1.75rem;
@@ -403,11 +408,16 @@ footer .footer__links--blank {
 .menu__top embed {
   height: 25px;
   width: 30px;
-  margin-right: 10px;
+  margin: 0 10px 0 20px;
 }
 .menu__list {
   background-color: #f6f6f6;
   padding: 0 1.06rem 2.5rem 1.06rem;
+}
+@media only screen and (min-width: 1024px) {
+  .menu__list {
+    padding: 0 15.06rem 2.5rem 15.06rem;
+  }
 }
 .menu__list__title {
   display: flex;
