--- a/scss/_resto.scss
+++ b/scss/_resto.scss
@@ -51,6 +51,10 @@
     border-top-right-radius: 30px;
     margin-top: -30px;
 
+    @media only screen and (min-width: $bp-small) {
+      justify-content: center;
+    }
+
     h1 {
       font-family: Shrikhand;
       font-size: 1.75rem;
@@ -60,13 +64,17 @@
     embed {
       height: 25px;
       width: 30px;
-      margin-right: 10px;
+      margin: 0 10px 0 20px;
     }
   }
 
   &__list {
     background-color: $color-background;
     padding: 0 1.06rem 2.5rem 1.06rem;
+
+    @media only screen and (min-width: $bp-small) {
+      padding: 0 15.06rem 2.5rem 15.06rem;
+    }
 
     &__title {
       @include container-flex;
